@@ -13,6 +13,7 @@ if prefer :apps4, 'rails-omniauth'
   prefs[:quiet_assets] = true
   prefs[:pages] = 'about+users'
   prefs[:locale] = 'none'
+  prefs[:rubocop] = false
 end
 
 __END__
