@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.0.30"
+  VERSION = "3.0.31"
 end
