@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h3. 3.0.31 December 29, 2014
+
+* set 'rubocop' option to false for RailsApps example apps
+
 h3. 3.0.30 December 29, 2014
 
 * suggest upgrade to Rails 4.2 for Rails 4.1 users
